# qr_studio

./:  setup_project.rs  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  build_appimage.sh
.github/workflows/: build-appimage.yml  build-flatpak.yml  build-linux.yml  build-windows.yml
data/: AppRun  com.example.qr_studio.desktop  io.github.SlobCoder.qr_studio.desktop  io.github.SlobCoder.qr_studio.gschema.xml  resources.gresource.xml  shortcuts.ui
flatpak/: cargo-sources.json  generate-cargo-sources.sh  io.github.SlobCoder.qr_studio.metainfo.xml  io.github.SlobCoder.qr_studio.yaml
logs_69026902458/: 0_build.txt
src/: cli.rs  country_codes.rs  helpers.rs  i18n.rs  main.rs  map_styles.rs  render.rs  svg.rs  tests.rs  types.rs  ui.rs
windows/: AppxManifest.xml  generate-icons.ps1
