[package]
name = "qr_studio"
version = "0.4.0"
edition = "2024"

[dependencies]
# ── Always required ──
qrcode = { version = "0.14", features = ["image"] }
image = "0.25"
gif = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vtracer = "0.6.5"
dirs = "6"
rayon = "1"
printpdf = { version = "0.8", features = ["png", "jpeg"] }
rqrr = "0.9"
clap = { version = "4", features = ["derive"] }

# ── Headless SVG rasterization (no gdk-pixbuf dependency) ──
resvg = { version = "0.44", optional = true }
usvg = { version = "0.44", optional = true }
tiny-skia = { version = "0.11", optional = true }

# ── GUI-only dependencies ──
gtk4 = { version = "0.11", package = "gtk4", optional = true }
adw = { version = "0.9", package = "libadwaita", optional = true }
gdk-pixbuf = { version = "0.20", optional = true }
libshumate = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
once_cell = { version = "1.21.4", optional = true }
hotpath = { version = "0.14", optional = true }

# ── Linux-only: color picker pipette via XDG portal ──
ashpd = { version = "0.13", default-features = false, features = ["tokio", "screenshot"], optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[build-dependencies]
glib-build-tools = "0.20"

[features]
default = ["gui"]
gui = [
    "dep:gtk4",
    "dep:adw",
    "dep:gdk-pixbuf",
    "dep:libshumate",
    "dep:reqwest",
    "dep:once_cell",
]
pipette = [
    "dep:ashpd",
    "dep:tokio",
]
cli = [
    "dep:resvg",
    "dep:usvg",
    "dep:tiny-skia",
]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
